test/fixtures/warnings/@deref.txt
@deref.j:6:12: error: dereference expressions may not have side effects
    @deref([self someRef]) += 7;
           ^

1 error generated.
